CGIV-8270 Corrected the hover state and added some styling to make it more visible

--- a/public/channelgrabber/products/scss/_products.scss
+++ b/public/channelgrabber/products/scss/_products.scss
@@ -560,3 +560,9 @@ div.tether-element div.hover-image {
         max-width: 200px;
     }
 }
+div.tether-element div.hover-link {
+    padding: 20px;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.06), 0 2px 32px rgba(0, 0, 0, 0.16);
+}
